# mero-lagani

./: .dockerignore  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
config/: settings.py  urls.py
crawler/: admin.py  apps.py  models.py  urls.py  views.py
crawler/management/commands/: clear_ipos.py  sync_ipos.py
crawler/migrations/: 0001_initial.py
crawler/services/: email_service.py  meroshare.py  scheduler.py
go-api/: go.mod  main.go
